--- a/Outlook-connector/HTML-Notification-Template/Template Notification.html
+++ b/Outlook-connector/HTML-Notification-Template/Template Notification.html
@@ -105,15 +105,51 @@
 									</tr>
 									<tr>
 										<td class="notification-table-header">
-											<span>&nbsp; Date:</span>
+											<span>&nbsp; Activity log alert: </span>
 										</td>
-										<td class="notification-table-text">2020-01-24 12:00:00</td>
+										<td class="notification-table-text">Fill in InfoData[11]</td>
 									</tr>
 									<tr>
 										<td class="notification-table-header">
-											<span>&nbsp; Message:</span>
+											<span>&nbsp; Event Time: </span>
 										</td>
-										<td class="notification-table-text">This is a warning!</td>
+										<td class="notification-table-text">EventTime </td>
+									</tr>
+									<tr>
+										<td class="notification-table-header">
+											<span>&nbsp; Action:</span>
+										</td>
+										<td class="notification-table-text">Action name<br><br>InfoData[10]</td>
+									</tr>
+									<tr>
+										<td class="notification-table-header">
+											<span>&nbsp; Resource group:</span>
+										</td>
+										<td class="notification-table-text">InfoData[4]</td>
+									</tr>
+									<tr>
+										<td class="notification-table-header">
+											<span>&nbsp; Resource:</span>
+										</td>
+										<td class="notification-table-text">InfoData[8]</td>
+									</tr>
+									<tr>
+										<td class="notification-table-header">
+											<span>&nbsp; Caller:</span>
+										</td>
+										<td class="notification-table-text">Caller</td>
+									</tr>
+									<tr>
+										<td class="notification-table-header">
+											<span>&nbsp; Event ID:</span>
+										</td>
+										<td class="notification-table-text">eventDataId</td>
+									</tr>
+									<tr>
+										<td class="notification-table-header">
+											<span>&nbsp; Status:</span>
+										</td>
+										<td class="notification-table-text">status</td>
 									</tr>
 									<tr class="notification-card-footer">
 										<td colspan="2">
