[ADD] Deleted footer info and changed to Azure hyperlink

--- a/Outlook-connector/HTML-Notification-Template/Template Notification.html
+++ b/Outlook-connector/HTML-Notification-Template/Template Notification.html
@@ -10,7 +10,7 @@
 		margin-left: 10px;
 		text-align: left;
 		border: none;
-		border-bottom: solid black 1.5pt;
+		border-bottom: solid rgb(81, 81, 81) 1.0pt;
 	}
 
 	.notification-table-text {
@@ -18,8 +18,7 @@
 		width: 70%;
 		text-align: left;
 		border: none;
-		border-bottom: solid black 1.5pt;
-		background: #F2F2F2;
+		border-bottom: solid rgb(81, 81, 81) 1.0pt;
 		font-size: 12.0pt;
 		height: 20.05pt;
 	}
@@ -158,10 +157,11 @@
 											</p>
 											<p style='text-align:center;'>
 												<b>
-													<span style='font-size:16.0pt;'>SANDRO PEREIRA</span>
+													<span style='font-size:16.0pt;'>Check details at the <a href="https://portal.zure.com/#home"> Azure portal</a></span>
 												</b>
 											</p>
-											<p style='text-align:center;'>
+											<p style="margin: 50px;"></p>
+											<!-- <p style='text-align:center;'>
 												<span>Contact me if you want to know more about Azure Logica Apps: 
 													<a href="mailto:sandro.pereira@devscope.net"
 														target="_blank">
@@ -169,7 +169,7 @@
 													</a>
 												</span>
 												<br/>&nbsp;
-											</p>
+											</p> -->
 										</td>
 									</tr>
 								</table>
