[ADD] Deleted log alert + changed order in rows

--- a/Outlook-connector/HTML-Notification-Template/Template Notification.html
+++ b/Outlook-connector/HTML-Notification-Template/Template Notification.html
@@ -104,21 +104,21 @@
 									</tr>
 									<tr>
 										<td class="notification-table-header">
-											<span>&nbsp; Activity log alert: </span>
+											<span>&nbsp; Event ID:</span>
 										</td>
-										<td class="notification-table-text">Fill in InfoData[11]</td>
+										<td class="notification-table-text">eventDataId</td>
+									</tr>
+									<tr>
+										<td class="notification-table-header">
+											<span>&nbsp; Action:</span>
+										</td>
+										<td class="notification-table-text">InfoData[8]</td>
 									</tr>
 									<tr>
 										<td class="notification-table-header">
 											<span>&nbsp; Event Time: </span>
 										</td>
 										<td class="notification-table-text">EventTime </td>
-									</tr>
-									<tr>
-										<td class="notification-table-header">
-											<span>&nbsp; Action:</span>
-										</td>
-										<td class="notification-table-text">Action name<br><br>InfoData[10]</td>
 									</tr>
 									<tr>
 										<td class="notification-table-header">
@@ -138,12 +138,7 @@
 										</td>
 										<td class="notification-table-text">Caller</td>
 									</tr>
-									<tr>
-										<td class="notification-table-header">
-											<span>&nbsp; Event ID:</span>
-										</td>
-										<td class="notification-table-text">eventDataId</td>
-									</tr>
+									
 									<tr>
 										<td class="notification-table-header">
 											<span>&nbsp; Status:</span>
