[ADD] Detail for action, caller info

--- a/Outlook-connector/HTML-Notification-Template/Template Notification.html
+++ b/Outlook-connector/HTML-Notification-Template/Template Notification.html
@@ -110,9 +110,19 @@
 									</tr>
 									<tr>
 										<td class="notification-table-header">
+											<span>&nbsp; Severity:</span>
+										</td>
+										<td class="notification-table-text">eventDataId</td>
+									</tr>
+									<tr>
+										<td class="notification-table-header">
 											<span>&nbsp; Action:</span>
 										</td>
-										<td class="notification-table-text">InfoData[8]</td>
+										<td class="notification-table-text">
+											InfoData[8]
+											<br>
+											Properties 내용 통째로
+										</td>
 									</tr>
 									<tr>
 										<td class="notification-table-header">
@@ -136,9 +146,14 @@
 										<td class="notification-table-header">
 											<span>&nbsp; Caller:</span>
 										</td>
-										<td class="notification-table-text">Caller</td>
+										<td class="notification-table-text">ClaimsJson['name'], Caller(email)</td>
 									</tr>
-									
+									<tr>
+										<td class="notification-table-header">
+											<span>&nbsp; Caller(ip):</span>
+										</td>
+										<td class="notification-table-text">ClaimsJson['ipaddr']</td>
+									</tr>
 									<tr>
 										<td class="notification-table-header">
 											<span>&nbsp; Status:</span>
