[REFACTOR] move style code to inline

--- a/Outlook-connector/HTML-Notification-Template/Template Notification.html
+++ b/Outlook-connector/HTML-Notification-Template/Template Notification.html
@@ -40,27 +40,6 @@
 		border-collapse: collapse;
 		background-color: #fbfbfb;
 	}
-
-	.image-table {
-		margin: auto;
-		width:30%;
-		border-collapse:collapse;
-	}
-
-	.image-table td {
-		padding: 5px;
-	}
-
-	.krafton-logo{
-		display: block;
-		width:100%;
-	}
-
-	.Azure-logo {
-		display: block;
-		width:100%
-	}
-	
 </style>
 
 <body style="background-color: #dfdfdf;">
@@ -74,15 +53,19 @@
 								<p style='font-size:5.0pt;'>
 									<span>&nbsp;</span>
 								</p>
-								<table class="image-table">
+								<table class="image-table" style="margin: auto;
+								width:30%;
+								border-collapse:collapse;">
 									<tr>
-										<td>
-											<img class="krafton-logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/14/Krafton_Logo.svg/2560px-Krafton_Logo.svg.png">
+										<td style="padding: 5px;">
+											<img class="krafton-logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/14/Krafton_Logo.svg/2560px-Krafton_Logo.svg.png" style="display: block;
+											width:100%;">
 										</td>
 									</tr>
 									<tr>
-										<td>
-											<img class="Azure-logo" src="https://images.ecomm.microsoft.com/cdn/mediahandler/azure-emails-templates/production/shared/images/templates/shared/images/logos/microsoft-azure.png">
+										<td style="padding: 5px;">
+											<img class="Azure-logo" src="https://images.ecomm.microsoft.com/cdn/mediahandler/azure-emails-templates/production/shared/images/templates/shared/images/logos/microsoft-azure.png" style="display: block;
+											width:100%;">
 										</td>
 									</tr>
 								</table>
